@@ -2,52 +2,65 @@ package com.example.app;
 
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
+
 import java.sql.*;
 import java.util.*;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 
+/**
+ * Servicio de acceso a datos para la biblioteca de videojuegos.
+ * Encapsula toda la lógica de negocio y consultas SQL.
+ */
 public class BibliotecaService {
 
-    private static final Logger LOGGER = Logger.getLogger(BibliotecaService.class.getName());
+    // ─────────────────────────────────────────
+    // VIDEOJUEGOS
+    // ─────────────────────────────────────────
 
+    /** Añade un juego a la biblioteca del usuario. Devuelve false si ya existe. */
     public boolean añadirVideojuego(int usuarioId, String titulo, String estado) {
-        String checkSql = "SELECT count(*) FROM videojuegos WHERE usuario_id = ? AND titulo = ?";
+        if (titulo == null || titulo.isBlank()) return false;
+        String checkSql  = "SELECT COUNT(*) FROM videojuegos WHERE usuario_id = ? AND titulo = ?";
         String insertSql = "INSERT INTO videojuegos (usuario_id, titulo, estado, valoracion, resena) VALUES (?, ?, ?, 0, '')";
+
         try (Connection conn = ConexionDB.conectar()) {
-            try (PreparedStatement checkStmt = conn.prepareStatement(checkSql)) {
-                checkStmt.setInt(1, usuarioId);
-                checkStmt.setString(2, titulo);
-                ResultSet rs = checkStmt.executeQuery();
+            try (PreparedStatement check = conn.prepareStatement(checkSql)) {
+                check.setInt(1, usuarioId);
+                check.setString(2, titulo);
+                ResultSet rs = check.executeQuery();
                 if (rs.next() && rs.getInt(1) > 0) return false;
             }
-            try (PreparedStatement insertStmt = conn.prepareStatement(insertSql)) {
-                insertStmt.setInt(1, usuarioId);
-                insertStmt.setString(2, titulo);
-                insertStmt.setString(3, estado);
-                return insertStmt.executeUpdate() > 0;
+            try (PreparedStatement insert = conn.prepareStatement(insertSql)) {
+                insert.setInt(1, usuarioId);
+                insert.setString(2, titulo);
+                insert.setString(3, estado);
+                return insert.executeUpdate() > 0;
             }
         } catch (SQLException e) {
-            LOGGER.log(Level.SEVERE, "Error al añadir videojuego: " + titulo, e);
+            System.err.println("[BibliotecaService] Error añadirVideojuego: " + e.getMessage());
             return false;
         }
     }
 
+    /** Actualiza estado, nota y reseña de un juego por su id. */
     public boolean actualizarVideojuego(int id, String nuevoEstado, int nuevaNota, String nuevaResena) {
+        if (nuevoEstado == null) return false;
+        // Validar rango de nota
+        int nota = Math.max(0, Math.min(10, nuevaNota));
         String sql = "UPDATE videojuegos SET estado = ?, valoracion = ?, resena = ? WHERE id = ?";
         try (Connection conn = ConexionDB.conectar();
              PreparedStatement stmt = conn.prepareStatement(sql)) {
             stmt.setString(1, nuevoEstado);
-            stmt.setInt(2, nuevaNota);
-            stmt.setString(3, nuevaResena);
+            stmt.setInt(2, nota);
+            stmt.setString(3, nuevaResena != null ? nuevaResena : "");
             stmt.setInt(4, id);
             return stmt.executeUpdate() > 0;
         } catch (SQLException e) {
-            LOGGER.log(Level.SEVERE, "Error al actualizar videojuego ID: " + id, e);
+            System.err.println("[BibliotecaService] Error actualizarVideojuego: " + e.getMessage());
             return false;
         }
     }
 
+    /** Elimina un juego de la biblioteca por su id. */
     public boolean eliminarVideojuego(int idJuego) {
         String sql = "DELETE FROM videojuegos WHERE id = ?";
         try (Connection conn = ConexionDB.conectar();
@@ -55,14 +68,81 @@ public class BibliotecaService {
             stmt.setInt(1, idJuego);
             return stmt.executeUpdate() > 0;
         } catch (SQLException e) {
-            LOGGER.log(Level.SEVERE, "Error al eliminar videojuego ID: " + idJuego, e);
+            System.err.println("[BibliotecaService] Error eliminarVideojuego: " + e.getMessage());
             return false;
         }
     }
 
+    /** Obtiene todos los juegos de un usuario dado su username. */
+    public ObservableList<Videojuego> obtenerJuegosDeOtroUsuario(String username) {
+        ObservableList<Videojuego> lista = FXCollections.observableArrayList();
+        String sql = """
+                SELECT v.* FROM videojuegos v
+                JOIN usuarios u ON v.usuario_id = u.id
+                WHERE u.username = ?
+                ORDER BY v.titulo ASC
+                """;
+        try (Connection conn = ConexionDB.conectar();
+             PreparedStatement stmt = conn.prepareStatement(sql)) {
+            stmt.setString(1, username);
+            ResultSet rs = stmt.executeQuery();
+            while (rs.next()) lista.add(mapVideojuego(rs));
+        } catch (SQLException e) {
+            System.err.println("[BibliotecaService] Error obtenerJuegosDeOtroUsuario: " + e.getMessage());
+        }
+        return lista;
+    }
+
+    // ─────────────────────────────────────────
+    // CATÁLOGO
+    // ─────────────────────────────────────────
+
+    /** Busca juegos en el catálogo global (máx. 10 resultados). */
+    public ObservableList<String> buscarEnCatalogoGlobal(String busqueda) {
+        ObservableList<String> resultados = FXCollections.observableArrayList();
+        if (busqueda == null || busqueda.isBlank()) return resultados;
+        String sql = "SELECT titulo FROM catalogo_juegos WHERE titulo LIKE ? ORDER BY titulo LIMIT 10";
+        try (Connection conn = ConexionDB.conectar();
+             PreparedStatement stmt = conn.prepareStatement(sql)) {
+            stmt.setString(1, "%" + busqueda.trim() + "%");
+            ResultSet rs = stmt.executeQuery();
+            while (rs.next()) resultados.add(rs.getString("titulo"));
+        } catch (SQLException e) {
+            System.err.println("[BibliotecaService] Error buscarEnCatalogoGlobal: " + e.getMessage());
+        }
+        return resultados;
+    }
+
+    /** Comprueba si un título existe en el catálogo global. */
+    public boolean existeEnCatalogo(String titulo) {
+        if (titulo == null || titulo.isBlank()) return false;
+        String sql = "SELECT COUNT(*) FROM catalogo_juegos WHERE titulo = ?";
+        try (Connection conn = ConexionDB.conectar();
+             PreparedStatement stmt = conn.prepareStatement(sql)) {
+            stmt.setString(1, titulo.trim());
+            ResultSet rs = stmt.executeQuery();
+            if (rs.next()) return rs.getInt(1) > 0;
+        } catch (SQLException e) {
+            System.err.println("[BibliotecaService] Error existeEnCatalogo: " + e.getMessage());
+        }
+        return false;
+    }
+
+    // ─────────────────────────────────────────
+    // ESTADÍSTICAS
+    // ─────────────────────────────────────────
+
+    /** Devuelve total de juegos y media de valoración de un usuario. */
     public Map<String, Object> obtenerEstadisticas(String username) {
         Map<String, Object> stats = new HashMap<>();
-        String sql = "SELECT COUNT(*) as total, IFNULL(AVG(valoracion), 0) as media FROM videojuegos v JOIN usuarios u ON v.usuario_id = u.id WHERE u.username = ?";
+        stats.put("total", 0);
+        stats.put("media", 0.0);
+        String sql = """
+                SELECT COUNT(*) AS total, IFNULL(AVG(valoracion), 0) AS media
+                FROM videojuegos v
+                JOIN usuarios u ON v.usuario_id = u.id
+                WHERE u.username = ?
+                """;
         try (Connection conn = ConexionDB.conectar();
              PreparedStatement stmt = conn.prepareStatement(sql)) {
             stmt.setString(1, username);
@@ -72,158 +152,19 @@ public class BibliotecaService {
                 stats.put("media", rs.getDouble("media"));
             }
         } catch (SQLException e) {
-            LOGGER.log(Level.WARNING, "Error al obtener estadísticas para: " + username, e);
+            System.err.println("[BibliotecaService] Error obtenerEstadisticas: " + e.getMessage());
         }
         return stats;
     }
 
-    public ObservableList<Videojuego> obtenerJuegosDeOtroUsuario(String username) {
-        ObservableList<Videojuego> lista = FXCollections.observableArrayList();
-        String sql = "SELECT v.* FROM videojuegos v JOIN usuarios u ON v.usuario_id = u.id WHERE u.username = ?";
-        try (Connection conn = ConexionDB.conectar();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-            stmt.setString(1, username);
-            ResultSet rs = stmt.executeQuery();
-            while (rs.next()) {
-                lista.add(new Videojuego(
-                        rs.getInt("id"),
-                        rs.getInt("usuario_id"),
-                        rs.getString("titulo"),
-                        rs.getString("estado"),
-                        rs.getInt("valoracion"),
-                        rs.getString("resena")
-                ));
-            }
-        } catch (SQLException e) {
-            LOGGER.log(Level.WARNING, "Error al obtener juegos de: " + username, e);
-        }
-        return lista;
-    }
-
-    public ObservableList<String> buscarEnCatalogoGlobal(String busqueda) {
-        ObservableList<String> resultados = FXCollections.observableArrayList();
-        if (busqueda == null || busqueda.trim().length() < 3) return resultados;
-
-        String sql = "SELECT titulo FROM catalogo_juegos WHERE titulo LIKE ? LIMIT 10";
-        try (Connection conn = ConexionDB.conectar();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-            stmt.setString(1, "%" + busqueda.trim() + "%");
-            ResultSet rs = stmt.executeQuery();
-            while (rs.next()) resultados.add(rs.getString("titulo"));
-        } catch (SQLException e) {
-            LOGGER.log(Level.WARNING, "Error en búsqueda de catálogo: " + busqueda, e);
-        }
-        return resultados;
-    }
-
-    public boolean existeEnCatalogo(String titulo) {
-        if (titulo == null || titulo.trim().isEmpty()) return false;
-        String sql = "SELECT COUNT(*) FROM catalogo_juegos WHERE titulo = ?";
-        try (Connection conn = ConexionDB.conectar();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-            stmt.setString(1, titulo.trim());
-            ResultSet rs = stmt.executeQuery();
-            if (rs.next()) return rs.getInt(1) > 0;
-        } catch (SQLException e) {
-            LOGGER.log(Level.WARNING, "Error verificando catálogo: " + titulo, e);
-        }
-        return false;
-    }
-
-    public boolean esAmigo(int usuarioId, String nombreAmigo) {
-        if (nombreAmigo == null || nombreAmigo.trim().isEmpty()) return false;
-        String sql = "SELECT COUNT(*) FROM amigos WHERE usuario_id = ? AND amigo_nombre = ?";
-        try (Connection conn = ConexionDB.conectar();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-            stmt.setInt(1, usuarioId);
-            stmt.setString(2, nombreAmigo.trim());
-            ResultSet rs = stmt.executeQuery();
-            if (rs.next()) return rs.getInt(1) > 0;
-        } catch (SQLException e) {
-            LOGGER.log(Level.WARNING, "Error verificando amistad", e);
-        }
-        return false;
-    }
-
-    public boolean agregarAmigo(int usuarioId, String nombreAmigo) {
-        if (nombreAmigo == null || nombreAmigo.trim().isEmpty()) return false;
-        String sql = "INSERT OR IGNORE INTO amigos (usuario_id, amigo_nombre) VALUES (?, ?)";
-        try (Connection conn = ConexionDB.conectar();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-            stmt.setInt(1, usuarioId);
-            stmt.setString(2, nombreAmigo.trim());
-            return stmt.executeUpdate() > 0;
-        } catch (SQLException e) {
-            LOGGER.log(Level.SEVERE, "Error al agregar amigo: " + nombreAmigo, e);
-            return false;
-        }
-    }
-
-    public String obtenerNombrePorId(int id) {
-        String sql = "SELECT username FROM usuarios WHERE id = ?";
-        try (Connection conn = ConexionDB.conectar();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-            stmt.setInt(1, id);
-            ResultSet rs = stmt.executeQuery();
-            if (rs.next()) return rs.getString("username");
-        } catch (SQLException e) {
-            LOGGER.log(Level.WARNING, "Error al obtener nombre por ID: " + id, e);
-        }
-        return "";
-    }
-
-    public boolean actualizarDatosUsuario(int id, String nuevoNombre, String nuevoEmail, String nuevaPass) {
-        try (Connection conn = ConexionDB.conectar()) {
-            String selectSql = "SELECT username, email, password FROM usuarios WHERE id = ?";
-            String usernameActual = "", emailActual = "", passwordActual = "";
-            try (PreparedStatement selectStmt = conn.prepareStatement(selectSql)) {
-                selectStmt.setInt(1, id);
-                ResultSet rs = selectStmt.executeQuery();
-                if (rs.next()) {
-                    usernameActual = rs.getString("username");
-                    emailActual = rs.getString("email");
-                    passwordActual = rs.getString("password");
-                }
-            }
-            if (nuevoNombre == null || nuevoNombre.trim().isEmpty()) nuevoNombre = usernameActual;
-            if (nuevoEmail == null || nuevoEmail.trim().isEmpty()) nuevoEmail = emailActual;
-            if (nuevaPass == null || nuevaPass.trim().isEmpty()) nuevaPass = passwordActual;
-
-            String updateSql = "UPDATE usuarios SET username = ?, email = ?, password = ? WHERE id = ?";
-            try (PreparedStatement stmt = conn.prepareStatement(updateSql)) {
-                stmt.setString(1, nuevoNombre);
-                stmt.setString(2, nuevoEmail);
-                stmt.setString(3, nuevaPass);
-                stmt.setInt(4, id);
-                return stmt.executeUpdate() > 0;
-            }
-        } catch (SQLException e) {
-            LOGGER.log(Level.SEVERE, "Error al actualizar datos de usuario ID: " + id, e);
-            return false;
-        }
-    }
-
-    public Map<String, String> obtenerDatosCompletosUsuario(int id) {
-        Map<String, String> datos = new HashMap<>();
-        String sql = "SELECT username, email, password FROM usuarios WHERE id = ?";
-        try (Connection conn = ConexionDB.conectar();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-            stmt.setInt(1, id);
-            ResultSet rs = stmt.executeQuery();
-            if (rs.next()) {
-                datos.put("username", rs.getString("username"));
-                datos.put("email", rs.getString("email"));
-                datos.put("password", rs.getString("password"));
-            }
-        } catch (SQLException e) {
-            LOGGER.log(Level.WARNING, "Error al obtener datos de usuario ID: " + id, e);
-        }
-        return datos;
-    }
-
+    /**
+     * Calcula la nota global de un juego combinando notas de usuarios (40%),
+     * nota de prensa simulada (40%) y popularidad (20%).
+     */
     public Map<String, Object> obtenerDetallesGlobalesJuego(String titulo) {
         Map<String, Object> detalles = new HashMap<>();
         String sql = "SELECT valoracion, resena FROM videojuegos WHERE titulo = ?";
+
         double sumaNotas = 0;
         int contador = 0;
         List<String> reseñas = new ArrayList<>();
@@ -236,21 +177,88 @@ public class BibliotecaService {
                 int nota = rs.getInt("valoracion");
                 if (nota > 0) { sumaNotas += nota; contador++; }
                 String res = rs.getString("resena");
-                if (res != null && !res.isEmpty()) reseñas.add(res);
+                if (res != null && !res.isBlank()) reseñas.add(res);
             }
         } catch (SQLException e) {
-            LOGGER.log(Level.WARNING, "Error al obtener detalles de: " + titulo, e);
+            System.err.println("[BibliotecaService] Error obtenerDetallesGlobalesJuego: " + e.getMessage());
         }
 
-        double notaUsuarios = (contador > 0) ? (sumaNotas / contador) : 0;
-        double notaGlobal = (notaUsuarios * 0.4) + (4.5 * 0.4) + (5.0 * 0.2);
-        detalles.put("notaGlobal", notaGlobal);
-        detalles.put("resenas", reseñas);
+        double notaUsuarios = contador > 0 ? sumaNotas / contador : 0;
+        double notaGlobal   = (notaUsuarios * 0.4) + (4.5 * 0.4) + (5.0 * 0.2);
+
+        detalles.put("notaGlobal",    Math.round(notaGlobal * 10.0) / 10.0);
+        detalles.put("notaUsuarios",  Math.round(notaUsuarios * 10.0) / 10.0);
+        detalles.put("numVotos",      contador);
+        detalles.put("resenas",       reseñas);
         return detalles;
     }
 
+    // ─────────────────────────────────────────
+    // AMIGOS
+    // ─────────────────────────────────────────
+
+    /** Comprueba si 'nombreAmigo' ya está en la lista de amigos del usuario. */
+    public boolean esAmigo(int usuarioId, String nombreAmigo) {
+        String sql = "SELECT COUNT(*) FROM amigos WHERE usuario_id = ? AND amigo_nombre = ?";
+        try (Connection conn = ConexionDB.conectar();
+             PreparedStatement stmt = conn.prepareStatement(sql)) {
+            stmt.setInt(1, usuarioId);
+            stmt.setString(2, nombreAmigo);
+            ResultSet rs = stmt.executeQuery();
+            if (rs.next()) return rs.getInt(1) > 0;
+        } catch (SQLException e) {
+            System.err.println("[BibliotecaService] Error esAmigo: " + e.getMessage());
+        }
+        return false;
+    }
+
+    /**
+     * Agrega un amigo al usuario. Devuelve false si:
+     * - el nombre de amigo es el propio usuario,
+     * - el usuario a añadir no existe, o
+     * - ya eran amigos.
+     */
+    public boolean agregarAmigo(int usuarioId, String nombreAmigo) {
+        if (nombreAmigo == null || nombreAmigo.isBlank()) return false;
+        // No permitir añadirse a uno mismo
+        String miNombre = obtenerNombrePorId(usuarioId);
+        if (miNombre != null && miNombre.equalsIgnoreCase(nombreAmigo.trim())) return false;
+        // El usuario debe existir
+        if (!existeUsuario(nombreAmigo.trim())) return false;
+
+        String sql = "INSERT OR IGNORE INTO amigos (usuario_id, amigo_nombre) VALUES (?, ?)";
+        try (Connection conn = ConexionDB.conectar();
+             PreparedStatement stmt = conn.prepareStatement(sql)) {
+            stmt.setInt(1, usuarioId);
+            stmt.setString(2, nombreAmigo.trim());
+            return stmt.executeUpdate() > 0;
+        } catch (SQLException e) {
+            System.err.println("[BibliotecaService] Error agregarAmigo: " + e.getMessage());
+            return false;
+        }
+    }
+
+    // ─────────────────────────────────────────
+    // USUARIOS
+    // ─────────────────────────────────────────
+
+    /** Devuelve el username de un usuario dado su id, o null si no existe. */
+    public String obtenerNombrePorId(int id) {
+        String sql = "SELECT username FROM usuarios WHERE id = ?";
+        try (Connection conn = ConexionDB.conectar();
+             PreparedStatement stmt = conn.prepareStatement(sql)) {
+            stmt.setInt(1, id);
+            ResultSet rs = stmt.executeQuery();
+            if (rs.next()) return rs.getString("username");
+        } catch (SQLException e) {
+            System.err.println("[BibliotecaService] Error obtenerNombrePorId: " + e.getMessage());
+        }
+        return null;
+    }
+
+    /** Comprueba si existe un usuario con el username dado. */
     public boolean existeUsuario(String username) {
-        if (username == null || username.trim().isEmpty()) return false;
+        if (username == null || username.isBlank()) return false;
         String sql = "SELECT COUNT(*) FROM usuarios WHERE username = ?";
         try (Connection conn = ConexionDB.conectar();
              PreparedStatement stmt = conn.prepareStatement(sql)) {
@@ -258,17 +266,71 @@ public class BibliotecaService {
             ResultSet rs = stmt.executeQuery();
             if (rs.next()) return rs.getInt(1) > 0;
         } catch (SQLException e) {
-            LOGGER.log(Level.WARNING, "Error verificando existencia de usuario: " + username, e);
+            System.err.println("[BibliotecaService] Error existeUsuario: " + e.getMessage());
         }
         return false;
     }
 
-    // ✅ HELPER: Búsqueda en memoria (evita consulta DB innecesaria desde la UI)
-    public Videojuego buscarJuegoEnLista(ObservableList<Videojuego> lista, String titulo) {
-        if (lista == null || titulo == null || titulo.trim().isEmpty()) return null;
-        return lista.stream()
-                .filter(j -> j.getTitulo() != null && j.getTitulo().equalsIgnoreCase(titulo.trim()))
-                .findFirst()
-                .orElse(null);
+    /**
+     * Actualiza nombre, email y/o contraseña de un usuario.
+     * Los campos null o vacíos conservan el valor actual de la BD.
+     */
+    public boolean actualizarDatosUsuario(int id, String nuevoNombre, String nuevoEmail, String nuevaPass) {
+        try (Connection conn = ConexionDB.conectar()) {
+
+            // Obtener valores actuales
+            Map<String, String> actuales = obtenerDatosCompletosUsuario(id);
+            if (actuales.isEmpty()) return false;
+
+            String nombre = (nuevoNombre  != null && !nuevoNombre.isBlank())  ? nuevoNombre.trim()  : actuales.get("username");
+            String email  = (nuevoEmail   != null && !nuevoEmail.isBlank())   ? nuevoEmail.trim()   : actuales.get("email");
+            String pass   = (nuevaPass    != null && !nuevaPass.isBlank())    ? nuevaPass.trim()    : actuales.get("password");
+
+            String sql = "UPDATE usuarios SET username = ?, email = ?, password = ? WHERE id = ?";
+            try (PreparedStatement stmt = conn.prepareStatement(sql)) {
+                stmt.setString(1, nombre);
+                stmt.setString(2, email);
+                stmt.setString(3, pass);
+                stmt.setInt(4, id);
+                return stmt.executeUpdate() > 0;
+            }
+        } catch (SQLException e) {
+            System.err.println("[BibliotecaService] Error actualizarDatosUsuario: " + e.getMessage());
+            return false;
+        }
+    }
+
+    /** Devuelve username, email y password de un usuario dado su id. */
+    public Map<String, String> obtenerDatosCompletosUsuario(int id) {
+        Map<String, String> datos = new HashMap<>();
+        String sql = "SELECT username, email, password FROM usuarios WHERE id = ?";
+        try (Connection conn = ConexionDB.conectar();
+             PreparedStatement stmt = conn.prepareStatement(sql)) {
+            stmt.setInt(1, id);
+            ResultSet rs = stmt.executeQuery();
+            if (rs.next()) {
+                datos.put("username", rs.getString("username"));
+                datos.put("email",    rs.getString("email"));
+                datos.put("password", rs.getString("password"));
+            }
+        } catch (SQLException e) {
+            System.err.println("[BibliotecaService] Error obtenerDatosCompletosUsuario: " + e.getMessage());
+        }
+        return datos;
+    }
+
+    // ─────────────────────────────────────────
+    // HELPERS INTERNOS
+    // ─────────────────────────────────────────
+
+    private Videojuego mapVideojuego(ResultSet rs) throws SQLException {
+        return new Videojuego(
+                rs.getInt("id"),
+                rs.getInt("usuario_id"),
+                rs.getString("titulo"),
+                rs.getString("estado"),
+                rs.getInt("valoracion"),
+                rs.getString("resena")
+        );
     }
 }
